ECA-1840: Proper cleanup of TCP service to allow re-deploy. Changed so JBoss will not try to apply its JSF listener to the CMP TCP WAR. Tested on JBoss.
git-svn-id: https://svn.cesecore.eu/svn/ejbca-restricted/trunk/ejbca@10277 37aeb1de-b14b-0410-9a0e-82b28170d228